objects/TimeCard__c/TimeCard__c.object-meta.xml
<CustomObject>
    <label>TimeCard</label>
    <nameField>
        <label>TimeCard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeCards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>