objects/TimeCard__c/fields/Break_Hours__c.field-meta.xml
<CustomField>
    <fullName>Break_Hours__c</fullName>
    <label>Break Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>