objects/TimeCard__c/fields/TimeSheet__c.field-meta.xml
<CustomField>
    <fullName>TimeSheet__c</fullName>
    <label>TimeSheet</label>
    <referenceTo>TimeSheet__c</referenceTo>
    <relationshipLabel>TimeCards</relationshipLabel>
    <relationshipName>TimeCalls</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>